<resources>
    <string name="app_name">MY_PROEKT_GLAV</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">save</string>
    <string name="text">text</string>
    <string name="profile">Profile</string>
    <string name="name">name</string>
    <string name="skip">skip</string>
    <string name="Title">Title</string>
    <string name="go_next">Go Next</string>
    <string name="btn_open">btn_open</string>
    <string name="save1">Save</string>
    <string name="names">Введите ваше имя</string>
    <string name="Ok">Готово</string>
</resources>