<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.my_proekt_3.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.my_proekt_3.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.my_proekt_3.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/taskFragment"
        android:name="com.example.my_proekt_3.ui.Task.TaskFragment"
        android:label="Task"
        tools:layout="@layout/fragment_task" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.my_proekt_3.ui.Profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_createFragment"
            app:destination="@id/createFragment" />
    </fragment>
    <fragment
        android:id="@+id/boardingFragment"
        android:name="com.example.my_proekt_3.ui.onBoarding.BoardingFragment"
        android:label="fragment_boarding"
        tools:layout="@layout/fragment_boarding" />
    <fragment
        android:id="@+id/createFragment"
        android:name="com.example.my_proekt_3.CREATE.CreateFragment"
        android:label="fragment_create"
        tools:layout="@layout/fragment_create" />
</navigation>